src/test/deca/context/invalid/modulo2.deca
// Description:
//    modulo incorrecte
//
// Resultats:
//     "Modulo" can not be applied on a non int operand, got String and int
// 
// Historique:
//    cree le 01/01/2022

{
    int a=10;
    String b="hi";
    int c=a%b;

}